# GenericClassificationTensorRTApi

./: CMakeLists.txt  README.md
include/: ClassifyByEngine.h  Resnet50Cls.h
src/: ClassifyByEngine.cpp  Resnet50Cls.cpp
test/: testClsEngine.cpp
